company form added, header and footer changes, js validator for company form added

--- a/task/assets/css/main.css
+++ b/task/assets/css/main.css
@@ -1,3 +1,17 @@
 :root {
     --bs-body-font-family: "Ubuntu", sans-serif;
 }
+
+header {
+    background-color: #eee;
+}
+
+nav.navbar {
+    background-color: #eee;
+}
+
+.form-error {
+    min-height: 1rem;
+    line-height: 1rem;
+    color: var(--bs-danger);
+}
